--- a/tea_backend/src/main/resources/application.yml
+++ b/tea_backend/src/main/resources/application.yml
@@ -2,11 +2,11 @@ server:
   port: 8080
 
 spring:
-  # 【新增】文件上传大小限制
+  # 🔥🔥🔥 核心修复：将上传限制从 6MB 提升到 200MB，以支持视频上传
   servlet:
     multipart:
-      max-file-size: 6MB      # 单个文件最大 6MB
-      max-request-size: 10MB  # 整个请求最大 10MB
+      max-file-size: 200MB      # 单个文件限制
+      max-request-size: 200MB   # 总请求限制
 
   datasource:
     url: jdbc:mysql://localhost:3306/tea_mall?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
@@ -22,7 +22,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.xu.tea.model
+  type-aliases-package: com.xu.tea.entity
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
